# MobileRobot

./: README.md  jini_EmptyMap.pgm  jini_EmptyMap.yaml
ArUco_marker_detection/: Mobile_Aruco.py  Webcam_test.py  precision_control.py
ArUco_marker_detection/image_web/: camera_calibration.py  mobile_capture.py
Nav2_Waypoint/: Nav2_classes.py  PID.py  goal_points.json  gui_trigger.py  keyboard_trigger.py  manip_trigger.py  nav2_params.yaml  package.xml  run_scenario.py  scenario_manager.py  setup.cfg  setup.py
